# basalt-cli

./: Cargo.toml  LICENSE  README.md
.github/workflows/: check.yml  test.yml
data/: basalt.Dockerfile  default.toml  entrypoint.sh  install.sh
src/: build.rs  cli.rs  init.rs  main.rs
src/auth/: login.rs  mod.rs
src/utils/: mod.rs
tests/: event-handlers.js  one.toml
