[package]
name = "basalt-cli"
version = "1.0.0"
edition = "2021"
description = "CLI for managing Basalt competitions and configurations"
authors = ["Jack Branch", "funnyboy-roks <funnyboyroks@gmail.com>"]
repository = "https://github.com/basalt-rs/basalt-cli"
license = "GPL-3.0-only"
keywords = ["basalt", "cli", "competition", "configuration", "pdf"]
categories = [
    "command-line-utilities",
    "virtualization",
    "development-tools::build-utils",
    "configuration",
]
exclude = [".github"]

[[bin]]
name = "basalt"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.27", features = ["derive"] }
bedrock = { package = "basalt-bedrock", version = "1.0.0", features = [
    "tokio",
] }
tokio = { version = "1.47.1", features = ["full"] }
lazy_static = "1.5.0"
tera = "1.20.0"
bollard = "0.18.1"
tokio-tar = "0.3.1"
futures = "0.3.31"
local-ip-address = "0.6.5"
ansi_term = "0.12.1"
